...
    String name = widget.profile.name;
    String handle = widget.profile.handle;
    return Scaffold(
      appBar: AppBar(
        leading: IconButton(
          icon: Icon(Icons.arrow_back_ios),
          key: ValueKey("ProfileScreenBackBtn"),
          onPressed: () {
            Navigator.pushNamed(context, '/');
          },
        ),
        iconTheme: IconThemeData(color: Colors.black),
        backgroundColor: Colors.white,
        centerTitle: true,
        title: Text(
          handle,
          key: ValueKey('UserProfileHandleText'),
          style: TextStyle(fontSize: 15, color: Colors.grey),
        ),
      ),
      // floatingActionButton: IconButton(
      //   icon: Icon(Icons.close),
      //   onPressed: () {
...
                      ),
                    ),
                    SizedBox(width: 50),
                    Column(
                      children: [
                        Text("${widget.profile.followers}",
                            key: ValueKey("FollowerCountText"),
                            style: TextStyle(
                                fontSize: 20, fontWeight: FontWeight.bold)),
                        Text("Followers"),
                      ],
                    ),
                    SizedBox(width: 50),
...
                  Text("Socials")
                ],
              ),
              Column(
                children: [
                  IconButton(
                      key: ValueKey("FollowUnfollowBtn"),
                      icon: Icon(
                          widget.isFollowing
                              ? Icons.person_remove_alt_1_rounded
                              : Icons.person_add_alt_1_rounded,
                          color: Colors.red[300]),
                      onPressed: () {
...
                          widget.isFollowing = !widget.isFollowing;
                        });
                        firebaseService.followUnfollowUser(widget.profile.uid);
                      }),
                  Text(
                    widget.isFollowing ? "Unfollow" : "Follow",
                    key: ValueKey("FollowUnfollowBtnText"),
                  )
                ],
              ),
            ],
          ),
          SizedBox(
...
